--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hola mundo</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste assumenda quos, laboriosam ea saepe quasi pariatur sit vero quia quas quibusdam dicta aperiam maxime accusantium enim sed explicabo fugiat dolorem.</p>
 </body>
 </html>
