--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Hola mundo</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste assumenda quos, laboriosam ea saepe quasi pariatur sit vero quia quas quibusdam dicta aperiam maxime accusantium enim sed explicabo fugiat dolorem.</p>
+    <aside>
+        <h2>Proyectos</h2>
+    </aside>
 </body>
 </html>
