Añadida funcionalidad pedida

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste assumenda quos, laboriosam ea saepe quasi pariatur sit vero quia quas quibusdam dicta aperiam maxime accusantium enim sed explicabo fugiat dolorem.</p>
     <aside>
         <h2>Proyectos</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis repellat quasi mollitia facere, commodi omnis, ex reprehenderit nemo veritatis nam perferendis officiis? Provident, nam corporis! Beatae quod voluptatibus nemo! Amet.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis repellat quasi mollitia facere, commodi omnis, ex reprehenderit nemo veritatis nam perferendis officiis? Provident, nam corporis! Beatae quod voluptatibus nemo! Amet. Lorem ipsum para todos</p>
     </aside>
 </body>
 </html>
